--- a/_posts/2015-11-05- movember.md
+++ b/_posts/2015-11-05- movember.md
@@ -7,7 +7,7 @@ categories: personal
 tags: 
   - moustache
   - movember
-comments: false
+comments: true
 mathjax: null
 featured: false
 published: true
