Spelling and grammar fixes

--- a/_posts/2015-10-30- ontheair.md
+++ b/_posts/2015-10-30- ontheair.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: On the air
+lang: en
 description: "The site is now visible"
 headline: "the magics of Jekyll - site is already up and running"
 categories: personal
