--- a/_posts/2015-11-05- movember.md
+++ b/_posts/2015-11-05- movember.md
@@ -13,7 +13,7 @@ featured: false
 published: true
 ---
 
-It's November, hairies month of the year. Once again I have joined Movember campaign for a good cause: to help men live happier, healthier, longer lives.
+It's November, hairiest month of the year. Once again I have joined Movember campaign for a good cause: to help men live happier, healthier, longer lives.
 I think You should join Movember too, and this is why:
 
 >&quot;The state of men’s health is in a crisis. Simply put, men are dying too young.
