--- a/_posts/2015-11-12- crankset.md
+++ b/_posts/2015-11-12- crankset.md
@@ -29,7 +29,7 @@ The problem with short cranks is that high quality short cranks are almost impos
 is using only three standard lengths, 170 mm, 172.5 or 175 mm. Anything shorter or longer is a rare breed.
 Considering the wide spectrum of human body lengths, that 5 mm difference in cranks is utterly ridiculous.
 
-However, I have not seen a single scientifical study, which explains why short cranks would have a positive effect in cycling performance.
+However, I have not seen a single scientific study, which explains why short cranks would have a positive effect in cycling performance.
 It might even be so that the optimum crank length is different for upright and recumbent bicycles. 
 Nevertheless, with short cranks your knee angle evidently remains smaller, so...
 
@@ -37,9 +37,9 @@ Nevertheless, with short cranks your knee angle evidently remains smaller, so...
 the more the knee is bent. However, my very _own knees_ seem to think this claim is true.
 * Claim: You are able to produce more force. You can squat with heavier weights when doing only partial squats, BUT at the same time, deep
 squats would recruit more (several) muscles, which could be beneficial on heavy sprints, maybe endurance wise too. Also, it's not the
-force, which is important, but power (which is torque * rpm, and torque reduces with short cranks using same force). 
+force, which is important, but the power (which is torque * rpm, and torque reduces with short cranks using same force). 
 * Claim: you can spin quicker (comfortably use higher cadence), so you can partially move the load from the leg muscles to your vascular system.
-This might be beneficial endurance wise, as your vascular system is designed for endurance. Also, faster your cadence, more your produce power with same torque. 
+This might be beneficial endurance wise, as your vascular system is designed for endurance. Also, faster your cadence, more you produce power with same torque. 
 Unfortunately, you'll also use more energy for nothing, just fighting your legs weight against gravity and moving the air around.
 * Claim: Your aerodynamic drag will be smaller, because the reference area created by your legs will be smaller. This is mostly true for
 recumbents only, and even for them it's partially depending on where the cranks (bottom bracket) are located at.
@@ -52,9 +52,9 @@ About my "gear inches" with 170+ rpm cadence: 53 front, 11 rear and 1.3 multipli
 means the speedometer goes up to 110 kph. If only I could repeat THAT on the track, too, d'oh! 
 
 At the moment I feel my natural cadence on rollers 
-is somewhere around 105, 115 starting to feel a bit uncomfortable. I do the power sprints with ultra high cadence using a recumbent version of 
+is somewhere around 105, while 115 starts to feel a bit uncomfortable. I do the power sprints with ultra high cadence using a recumbent version of 
 dancing-out-of-the-saddle: you lift your bottom up from the seat so that your body is tensioned between cranks and upper part of the seat, 
-legs spinning violently. It probably looks ugly and crazy, but generates serious wattage and requires using you body's core muscles, which is a 
+legs spinning violently. It probably looks ugly and crazy, but generates serious wattage and requires using your body's core muscles, which is a 
 bonus for your general fitness.
 
 Thanks for reading.	
