--- a/fi/_posts/2016-03-21- ontheair.md
+++ b/fi/_posts/2016-03-21- ontheair.md
@@ -19,4 +19,4 @@ Vuodenvaihteen kaikenlaiset kiireet ajoivat tämän lokalisointiprojektin yli,
 mutta parempi myöhään kuin ei milloinkaan.
 
 Tavallaan olen kuitenkin edelleen etuajassa - eihän minulla vielä ole edes 
-sitä kilpailuvälinettäni ja ennätysyritykseenkin on vielä seitsemän kuukautta aikaa...
+sitä kilpailuvälinettäni ja ennätysyritykseenkin on vielä neljä kuukautta aikaa...
