--- a/fi/_posts/2016-06-23- raimo70.md
+++ b/fi/_posts/2016-06-23- raimo70.md
@@ -13,7 +13,8 @@ featured: false
 published: true
 ---
 
-Yhteistyökumppanini ja mentorini, Velosport kauppias Raimo Nieminen täytti äskettäin 70 vuotta. 
+Yhteistyökumppanini ja mentorini, yksi kaikkien aikojen menestyneimmistä suomalaisista 
+ratapyöräilijöistä, Velosport-kauppias Raimo Nieminen täytti äskettäin 70 vuotta. 
 
 Iltasanomissa oli Raimosta oikein hyvä juttu, kannattaa lukea: 
 [http://www.iltasanomat.fi/muutlajit/art-2000001202427.html](http://www.iltasanomat.fi/muutlajit/art-2000001202427.html)
