--- a/fi/_posts/2016-06-30- helmet.md
+++ b/fi/_posts/2016-06-30- helmet.md
@@ -29,7 +29,8 @@ Eilen (siis keskiviikkona 29. kesäkuuta) kävin ajamassa tunnin verran Cannesin
 kilvanajovehkeissä: Castellin Aero Race paita päällä, aika-ajokypärä päässä ja kenkien päällä "aerosukat".
 Poistuessani radalta sain vähän paheksuvia katseita ja tiukkoja kysymyksiä joltakin ei-niin-kovaa 
 polkeneelta porukalta: epäilivät ihan vakavissaan että tässä laitteessa on moottori, eikä kaikki 
-tainneet uskoa vakuuttelujani pelkistä jalka-moottoreista.
+tainneet uskoa vakuuttelujani pelkistä jalka-moottoreista. Kai se on vaikea uskoa, että tällainen
+kolmipyöräinen vekotin (jonka moni kai mieltää vammaisen laitteeksi) voi kulkea ihan reippaasti.
 
 Kirjoittelen muuten tätä postausta Nancy:ssä illansuussa: olen nyt matkalla Amsterdamin MM-kilpailuihin,
 joten siellä sitten paremmat ja oikeammat testit ihan kohta, muutaman päivän kuluttua.
