--- a/en/_posts/2016-11-29- worldrecord2016.md
+++ b/en/_posts/2016-11-29- worldrecord2016.md
@@ -16,7 +16,7 @@ published: true
 ## World record, trike one hour time trial
 
 Sorry about the long silence in the blog, the record attempt really took place as planned
-on 6th August. It was successful, I set the new World Record, 591 meters better than 
+on 6th August. It was a successful attempt, I set the new World Record, 591 meters better than 
 the previous one, which had been recorded one month earlier in Germany.
 
 ### THANK YOU ALL !
